# timetabling_problem

./: .dockerignore  .gitignore  DockerFile  Dockerfile  Jenkinsfile  chromosome_-174630_09281953.json  chromosome_-21920_09281949.json  chromosome_-22780_09281941.json  chromosome_-22830_09281949.json  chromosome_fitness.py  class.json  course.json  dokcer-compose.yml  fitness.py  genetic_algo.py  little_gene.json  main.py  pyproject.toml  server.py  sheet.md  test_gene.json  test_gene_washed.json  wash.py
data/: wash.py
data/course/: class_info copy.json  course_washed.json  rules.json
data/results/: chromosome_-13600_10231446.json  demo-chromosome_-14000_10230023.json  demo-chromosome_-14000_10230023_record.json  rules.json  sample_-1900_05231723.json  sample_-1900_05231906.json  sample_-4050_00000000.json
deploy/: Dockerfile  Jenkinsfile
deploy/conf/: nginx.conf  supervisord.conf
fitness/: __init__.py  bonus.py  fitness_weight.cfg  penalty.py
src/: app.py
src/algorithm/genetic_algo/: app.py  chromosome.py  crossover.py  mutate.py  parameter.py  select.py
src/algorithm/models/: classroom.py  curriculum.py
src/algorithm/services/: curriculum.py  custom_rule.py  fitness.py  school_curriculum.py
src/algorithm/services/fitness/: abstract.py  app.py
src/algorithm/ttp/: app.py  chromosome.py  crossover.py  mutate.py  select.py
src/routers/: api_router.py
src/routers/v1/: chromosome.py
src/schemas/: __init__.py  chromosome.py
src/services/: chromosome.py
tests/: test_school_curriculum_service.py
(+12 files in other folders)
